--- a/pwn/pwn400-nolibc4u/Dockerfile
+++ b/pwn/pwn400-nolibc4u/Dockerfile
@@ -1,1 +1,7 @@
 FROM wangyihang/sniperoj:pwn400-nolibc4u
+
+MAINTAINER Yihang Wang "wangyihanger@gmai.com"
+
+COPY ./challenge.sh /challenge.sh
+
+RUN chmod +x /challenge.sh
