--- a/pwn/pwn100-good-luck/Dockerfile
+++ b/pwn/pwn100-good-luck/Dockerfile
@@ -1,1 +1,7 @@
 FROM wangyihang/sniperoj:pwn100-good-luck
+
+MAINTAINER Yihang Wang "wangyihanger@gmai.com"
+
+COPY ./challenge.sh /challenge.sh
+
+RUN chmod +x /challenge.sh
