--- a/pwn/pwn200-actf-run-circles/Dockerfile
+++ b/pwn/pwn200-actf-run-circles/Dockerfile
@@ -1,1 +1,7 @@
 FROM wangyihang/sniperoj:pwn200-actf-run-circles
+
+MAINTAINER Yihang Wang "wangyihanger@gmai.com"
+
+COPY ./challenge.sh /challenge.sh
+
+RUN chmod +x /challenge.sh
