--- a/pwn/pwn300-sctf-format/Dockerfile
+++ b/pwn/pwn300-sctf-format/Dockerfile
@@ -1,1 +1,7 @@
 FROM wangyihang/sniperoj:pwn300-sctf-format
+
+MAINTAINER Yihang Wang "wangyihanger@gmai.com"
+
+COPY ./challenge.sh /challenge.sh
+
+RUN chmod +x /challenge.sh
