--- a/pwn/pwn500-bank-roppery/Dockerfile
+++ b/pwn/pwn500-bank-roppery/Dockerfile
@@ -1,1 +1,7 @@
 FROM wangyihang/sniperoj:pwn500-bank-roppery
+
+MAINTAINER Yihang Wang "wangyihanger@gmai.com"
+
+COPY ./challenge.sh /challenge.sh
+
+RUN chmod +x /challenge.sh
