--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -14,8 +14,8 @@ RUN apt install -y \
     libapache2-mod-php
 
 # Setup the vulnerability environment
-COPY source/* /var/www/html
-COPY source/.* /var/www/html
+RUN rm -rf /var/www/html && mkdir /var/www/html
+COPY source /var/www/html
 
 # add new user if it is needed
 # RUN useradd -d /home/ctf/ -m -p ctf -s /bin/bash ctf
