--- a/example/pwn/Dockerfile
+++ b/example/pwn/Dockerfile
@@ -9,19 +9,25 @@ RUN apt update
 
 # Setup Server Environment
 RUN apt install -y \
-    python \
+    make \
+    gcc \
     socat
 
 # add new user if it is needed
 RUN useradd -d /home/ctf/ -m -p ctf -s /bin/bash ctf
 RUN echo "ctf:ctf" | chpasswd
 
-# Change user and work directory
+# Change work directory
 WORKDIR /home/ctf
-USER ctf
 
 # Setup the vulnerability environment
-COPY source/pwn .
+COPY source .
+
+# Compile binary
+RUN make
+
+# Change user
+USER ctf
 
 # Entry point
-ENTRYPOINT socat tcp-l:8080,fork,reuseaddr exec:pwn && /bin/bash
+ENTRYPOINT socat tcp-l:8080,fork,reuseaddr exec:./pwn && /bin/bash
