[+] Add web db example

--- a/example/web/db/docker-compose.yml
+++ b/example/web/db/docker-compose.yml
@@ -2,10 +2,11 @@ version: '2'
 
 services:
     mysql:
-        image: mysql:5
+        image: mysql:5.6
         volumes:
             - ./db-volume:/var/lib/mysql
             - ./database.sql:/docker-entrypoint-initdb.d
+            - ./mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
         environment:
             - MYSQL_DATABASE=ctf
             - MYSQL_ROOT_PASSWORD=root
