--- a/web/md5-vs-injection/docker-compose.yml
+++ b/web/md5-vs-injection/docker-compose.yml
@@ -2,11 +2,12 @@ version: '2'
 
 services:
   mysql:
-    image: mysql:5
+    image: mysql:5.6
     restart: always
     volumes:
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
       - ./db-volume:/var/lib/mysql
+      - ./mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
     environment:
       - MYSQL_ROOT_PASSWORD=root
   web:
