[+] Update web challenges dockerfile (using mount instead of COPY)

--- a/web/2048/docker-compose.yml
+++ b/web/2048/docker-compose.yml
@@ -7,3 +7,5 @@ services:
             - '10000:80'
         stdin_open: true
         tty: true
+        volumes:
+            - ./logs:/var/log/apache2
