--- a/example/web/db/docker-compose.yml
+++ b/example/web/db/docker-compose.yml
@@ -1,20 +1,23 @@
 version: '2'
 
 services:
-    mysql:
-        image: mysql:5.6
-        volumes:
-            - ./db-volume:/var/lib/mysql
-            - ./database.sql:/docker-entrypoint-initdb.d
-            - ./mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
-        environment:
-            - MYSQL_DATABASE=ctf
-            - MYSQL_ROOT_PASSWORD=root
-    web:
-        build: .
-        depends_on:
-            - mysql
-        ports:
-            - '80:80'
-        stdin_open: true
-        tty: true
+        mysql:
+                image: mysql:5.6
+                volumes:
+                        - ./db-volume:/var/lib/mysql
+                        - ./database.sql:/docker-entrypoint-initdb.d
+                        - ./mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
+                environment:
+                        - MYSQL_DATABASE=ctf
+                        - MYSQL_ROOT_PASSWORD=root
+                web:
+                        build: .
+                        depends_on:
+                                - mysql
+                        ports:
+                                - '80:80'
+                        stdin_open: true
+                        tty: true
+                        volumes:
+                                - ./source:/var/www/html
+                                - ./logs:/var/log/apache2
