--- a/example/web/nodb/docker-compose.yml
+++ b/example/web/nodb/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '2'
 
 services:
-    web:
-        build: .
-        ports:
-            - '80:80'
-        stdin_open: true
-        tty: true
+        web:
+                build: .
+                ports:
+                        - '80:80'
+                stdin_open: true
+                tty: true
+                volumes:
+                        - ./source:/var/www/html
+                        - ./logs:/var/log/apache2
