--- a/web/2018-suctf-homework/docker-compose.yml
+++ b/web/2018-suctf-homework/docker-compose.yml
@@ -17,3 +17,6 @@ services:
             - '80:80'
         stdin_open: true
         tty: true
+        volumes:
+            - ./source:/var/www/html
+            - ./logs:/var/log/apache2
