--- a/web/hard-injection-via-update/docker-compose.yml
+++ b/web/hard-injection-via-update/docker-compose.yml
@@ -18,3 +18,6 @@ services:
             - '10009:80'
         stdin_open: true
         tty: true
+        volumes:
+            - ./source:/var/www/html
+            - ./logs:/var/log/apache2
