--- a/web/punctuation-webshell/docker-compose.yml
+++ b/web/punctuation-webshell/docker-compose.yml
@@ -7,3 +7,6 @@ services:
             - '10012:80'
         stdin_open: true
         tty: true
+        volumes:
+            - ./source:/var/www/html
+            - ./logs:/var/log/apache2
