--- a/web/2018-suctf-homework/docker-compose.yml
+++ b/web/2018-suctf-homework/docker-compose.yml
@@ -1,22 +1,23 @@
 version: '2'
 
 services:
-    mysql:
-        image: mysql:5
-        volumes:
-            - ./db-volume:/var/lib/mysql
-            - ./database.sql:/docker-entrypoint-initdb.d
-        environment:
-            - MYSQL_DATABASE=ctf
-            - MYSQL_ROOT_PASSWORD=root
-    web:
-        build: .
-        depends_on:
-            - mysql
-        ports:
-            - '80:80'
-        stdin_open: true
-        tty: true
-        volumes:
-            - ./source:/var/www/html
-            - ./logs:/var/log/apache2
+  mysql:
+    image: mysql:5.6
+    restart: always
+    volumes:
+      - ./database.sql:/docker-entrypoint-initdb.d/database.sql
+      - ./db-volume:/var/lib/mysql
+      - ./mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
+    environment:
+      - MYSQL_DATABASE=ctf
+      - MYSQL_ROOT_PASSWORD=root
+  web:
+    build: .
+    depends_on:
+      - mysql
+    ports:
+      - '10013:80'
+    volumes:
+      - ./source:/var/www/html
+      - ./logs:/var/log/apache2
+    stdin_open: true
