--- a/example/web/db/docker-compose.yml
+++ b/example/web/db/docker-compose.yml
@@ -5,7 +5,7 @@ services:
                 image: mysql:5.6
                 volumes:
                         - ./db-volume:/var/lib/mysql
-                        - ./database.sql:/docker-entrypoint-initdb.d
+                        - ./database.sql:/docker-entrypoint-initdb.d/database.sql
                         - ./mysqld.cnf:/etc/mysql/mysql.conf.d/mysqld.cnf
                 environment:
                         - MYSQL_DATABASE=ctf
