--- a/web/trick-on-base64/docker-compose.yml
+++ b/web/trick-on-base64/docker-compose.yml
@@ -10,3 +10,4 @@ services:
                 volumes:
                         - ./source:/var/www/html
                         - ./logs:/var/log/apache2
+                        - ./flag:/flag
