--- a/web/guzzle/Dockerfile
+++ b/web/guzzle/Dockerfile
@@ -8,6 +8,7 @@ MAINTAINER Wang Yihang "wangyihanger@gmail.com"
 RUN apt update
 RUN apt install -y apache2 curl zlibc
 RUN apt install -y php libapache2-mod-php
+RUN apt install -y git
 RUN apt install -y php-mysql php-gd php-mbstring php-dom
 
 # Composer
