--- a/web/guzzle/Dockerfile
+++ b/web/guzzle/Dockerfile
@@ -10,6 +10,7 @@ RUN apt install -y apache2 curl zlibc
 RUN apt install -y php libapache2-mod-php
 RUN apt install -y php-mysql php-gd php-mbstring php-dom
 RUN apt install -y git
+RUN apt install -y unzip
 
 # Composer
 WORKDIR /var/www/
