--- a/web/guzzle/Dockerfile
+++ b/web/guzzle/Dockerfile
@@ -18,5 +18,8 @@ RUN curl -vv -sS https://getcomposer.org/installer | php
 COPY ./source/composer.json /var/www/composer.json
 RUN php composer.phar install -vvv
 
+# Set writable folders
+RUN chmod o+w /var/www/html/assets /var/www/uploads
+
 # Entry point
 ENTRYPOINT service apache2 start && /bin/bash
