--- a/web/2019-sjtu-python/docker-compose.yml
+++ b/web/2019-sjtu-python/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: .
     volumes:
       - ./src:/app:ro
+      - ./flag:/f11111l1l4444g
     restart: always
     ports:
       - 10018:5000
