--- a/pwn/HITCON-Training-Lab-07/Dockerfile
+++ b/pwn/HITCON-Training-Lab-07/Dockerfile
@@ -10,7 +10,7 @@ RUN apt update
 
 # Setup Server Environment
 RUN apt install -y \
-    make \
+    make clean || make \
     gcc \
     socat
 
@@ -25,7 +25,7 @@ WORKDIR /home/ctf
 COPY source .
 
 # Compile binary
-RUN make
+RUN make clean || make
 
 # Change user
 USER ctf
