--- a/pwn/HITCON-Training-Lab-05/source/Makefile
+++ b/pwn/HITCON-Training-Lab-05/source/Makefile
@@ -1,2 +1,4 @@
 simplerop:simplerop.c
 	gcc -fno-stack-protector -m32 -static -mpreferred-stack-boundary=2 simplerop.c -o simplerop
+clean:
+	rm -rf simplerop
