--- a/pwn/HITCON-Training-Lab-06/source/Makefile
+++ b/pwn/HITCON-Training-Lab-06/source/Makefile
@@ -1,2 +1,4 @@
 migration:migration.c
 	gcc -m32 -z relro -z now -fno-stack-protector -mpreferred-stack-boundary=2 migration.c -o migration
+clean:
+	rm -rf migration
